--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -32,7 +32,38 @@
     <p>A web-based notebook that enables interactive data analytics. <br/>
       You can make beautiful data-driven, interactive and collaborative documents with SQL, Scala and with the necessary infrastructure for data science, cluster spark, hadoop, redshift and more...
     </p>
+    <button type="button" class="btn btn-success btn-lg bigFingerButton" data-toggle="modal" data-target="#contact">
+    Contact
+    </button>
     <a href="" class="btn btn-success btn-lg bigFingerButton" role="button">Try DataSwarm</a></p>
+
+    <div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <form action="https://getsimpleform.com/messages?form_api_token=9be831dbaa768d762c67b4c07b3b3bfc" method="post">
+              <div class="form-group">
+                <label for="recipient-name" class="control-label">Name:</label>
+                <input type="text" name="name" class="form-control" id="recipient-name">
+              </div>
+              <div class="form-group">
+                <label for="message-text" class="control-label">Message:</label>
+                <textarea class="form-control" id="message-text" name="message"></textarea>
+              </div>
+
+              <div class="form-group">
+                <label class="control-label"></label>
+                <div class="">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="submit" class="btn btn-success" >Send <span class="glyphicon glyphicon-send"></span></button>
+                </div>
+              </div>
+          
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endif %}
