--- a/_includes/themes/dataswarm/_navigation.html
+++ b/_includes/themes/dataswarm/_navigation.html
@@ -1,37 +1,33 @@
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">
-            DataSwarm
-          </a>
+<nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation"> 
+        <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">DataSwarm</a>
+            </div>
+          
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a class="page-scroll" href="#page-top">Home</a></li>
+                    <li><a class="page-scroll" href="#notebook">Notebook</a></li>
+                    <li><a  class="page-scroll" href="#infrastructure">Infrastructure</a></li>
+                    <li><a class="page-scroll" href="#language">Language</a></li>
+                    <li><a class="page-scroll" href="#versions">Versions</a></li>
+                    <li><a class="page-scroll" href="#visualization">Visualization</a></li>
+                </ul>
+            </div>
         </div>
-        <nav class="navbar-collapse collapse" role="navigation">
-          <ul class="nav navbar-nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'nav-left' %}
-            {% include JB/pages_list %}
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'nav-right' %}
-            {% include JB/pages_list %}
-          </ul>
-        </nav><!--/.navbar-collapse -->
-      </div>
-    </div>
+    </nav>
 
 {% if page.title == "DataSwarm" %}
-<div class="jumbotron">
+<!-- <div class="jumbotron">
   <div class="container">
-<!--    <p>A web-based notebook that enables interactive data analytics. <br/>
-      You can make beautiful data-driven, interactive and collaborative documents with SQL, Scala and with the necessary infrastructure for data science, cluster spark, hadoop, redshift and more...
-    </p> -->
     <button type="button" class="btn btn-success btn-lg bigFingerButton" data-toggle="modal" data-target="#contact">
     Contact
     </button>
@@ -65,5 +61,5 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 {% endif %}
