--- a/_includes/themes/dataswarm/_navigation.html
+++ b/_includes/themes/dataswarm/_navigation.html
@@ -9,7 +9,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#page-top">DataSwarm</a>
+            <a class="navbar-brand" href="#page-top"> 
+                <img src="/assets/themes/dataswarm/img/dataswarm_logo.png" width="40" alt="I'm zeppelin">
+                DataSwarm
+            </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
