--- a/_includes/themes/dataswarm/default.html
+++ b/_includes/themes/dataswarm/default.html
@@ -29,7 +29,7 @@
     <!-- atom & rss feed -->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
-
+    <link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="http://dataswarm.io/favicon.ico" />
   </head>
 
   <body id="page-top" class="index">
