--- a/_includes/themes/dataswarm/_navigation.html
+++ b/_includes/themes/dataswarm/_navigation.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#page-top"> 
-                <img src="/assets/themes/dataswarm/img/dataswarm_logo.png" width="40" alt="I'm dataswarm">
+                <img src="/assets/themes/dataswarm/img/logo.png" width="40">
                 DataSwarm
             </a>
         </div>
